--- a/Cleaning_pipline/Cleaning_pipeline_first_attempt.ipynb
+++ b/Cleaning_pipline/Cleaning_pipeline_first_attempt.ipynb
@@ -238,14 +238,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# Import data sets"
+    "#  Data sets\n",
+    "http://www.nber.org/patents/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  > Apart from scrapped data sets we will also be using data sets from http://www.nber.org/patents/ . Below we provide preprocessing of this data set"
    ]
   },
   {
