Augment and reclean data set

--- a/Cleaning_pipline/Cleaning_continued_augmenting_data_set.ipynb
+++ b/Cleaning_pipline/Cleaning_continued_augmenting_data_set.ipynb
@@ -182,7 +182,7 @@
    "metadata": {},
    "source": [
     "The scrapped data above contain the patent title which is not  in the url.\n",
-    "    * We check for the particular patent in the merged patent data set \n",
+    "    * We check for the particular patent in the merged patent data set and in scrapped data\n",
     "    * Then add a title column\n",
     "    * Note that we have duplicated values due to different country returned in sample code below"
    ]
@@ -299,9 +299,11 @@
     }
    ],
    "source": [
-    "merged_data_left.loc[merged_data_left['PATENT']==6009552] # we choose patent value 60009552 \n",
+    "merged_data_left.loc[merged_data_left['PATENT']==6009552] # we choose patent value 60009552 (which is in the returned \n",
+    "                                                          # scrapped data)\n",
     "                                                          # checked if it is the merged data set\n",
-    "                                                         # As it can be observed it is in the data set"
+    "                                                         # As it can be observed it is in the data set\n",
+    "                                                        # we can add title to this patent_id (from scrapped data)"
    ]
   },
   {
